Setup DBs: Adding Databases and Tables

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://<mysql_host>/cms?usessl=false
+spring.datasource.url=jdbc:mysql://172.21.44.35/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=<mysql_password>
+spring.datasource.password=PbKgzJCSzifo9vb5I5DS9FCP
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
