--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -16,7 +16,7 @@ management.endpoint.health.show-details=always
 management.health.db.enabled=true
 
 
-api.path=/api/v1/
+api.path=/
 jwt.secret=$!@#$^%$$$%####$DDCPN0234FCFDPD8670M
 
 
