--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=back-end
 
-spring.datasource.url=jdbc:mysql://172.21.215.204/cms?usessl=false
+spring.datasource.url=jdbc:mysql://127.0.0.1/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=HEXEtZefd9Z6u4Pj48wdawGH
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
-spring.data.mongodb.uri=mongodb://root:NQOY9wnvOeQXnHTB41u8CfhP@172.21.36.84:27017/prescriptions?authSource=admin
+spring.data.mongodb.uri=mongodb://root:123qweasdzxc@127.0.0.1:27017/prescriptions?authSource=admin
 
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
