--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=back-end
 
+# Host for local test -> 127.0.0.1
 spring.datasource.url=jdbc:mysql://172.21.208.191/cms?usessl=false
 spring.datasource.username=root
 
@@ -10,6 +11,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
+# Credentials and host for local test -> root:123qweasdzxc@127.0.0.1
 spring.data.mongodb.uri=mongodb://root:7nBOKBpfIE00ASke4IRMXCdV@172.21.121.53:27017/prescriptions?authSource=admin
 
 management.endpoint.health.show-details=always
