--- a/.github/workflows/lint-frontend.yml
+++ b/.github/workflows/lint-frontend.yml
@@ -18,11 +18,20 @@ jobs:
         run: |
           npm install -g htmlhint stylelint eslint
 
-      - name: Lint HTML
-        run: htmlhint app/src/main/resources/static/assets/pages//*.html || true
+      - name: Lint index HTML
+        run: htmlhint app/src/main/resources/static/*.html || true
+        
+      - name: Lint pages HTML
+        run: htmlhint app/src/main/resources/static/pages/*.html || true
+
+      - name: Lint templates/admin HTML
+        run: htmlhint app/src/main/resources/templates/admin/*.html || true
+      
+      - name: Lint templates/doctor HTML
+        run: htmlhint app/src/main/resources/templates/doctor/*.html || true
 
       - name: Lint CSS
-        run: stylelint "app/src/main/resources/static/assets/css//*.css" || true
+        run: stylelint "app/src/main/resources/static/assets/css/*.css" || true
 
       - name: Lint JS
-        run: eslint app/src/main/resources/static/assets/js//*.js || true
+        run: eslint app/src/main/resources/static/js/*.js || true
