--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=back-end
 
 # Host for local test -> 127.0.0.1
-spring.datasource.url=jdbc:mysql://172.21.208.191/cms?usessl=false
+spring.datasource.url=jdbc:mysql://127.0.0.1/cms?usessl=false
+
+# spring.datasource.url=jdbc:mysql://172.21.208.191/cms?usessl=false
 spring.datasource.username=root
 
-spring.datasource.password=DB09LYIoo6lor2AgZVxWwsHJ
+# For local access to DB password is empty
+spring.datasource.password=
+# spring.datasource.password=DB09LYIoo6lor2AgZVxWwsHJ
+
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
@@ -12,7 +17,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false
 
 # Credentials and host for local test -> root:123qweasdzxc@127.0.0.1
-spring.data.mongodb.uri=mongodb://root:7nBOKBpfIE00ASke4IRMXCdV@172.21.121.53:27017/prescriptions?authSource=admin
+spring.data.mongodb.uri=mongodb://root:123qweasdzxc@127.0.0.1:27017/prescriptions?authSource=admin
+
+# Credentials and host for remote DB 
+# spring.data.mongodb.uri=mongodb://root:7nBOKBpfIE00ASke4IRMXCdV@172.21.121.53:27017/prescriptions?authSource=admin
 
 management.endpoint.health.show-details=always
 management.health.db.enabled=true
